@@ -61,9 +61,9 @@ destroy, or improve it, quote it at length, excerpt,
 incorporate, collate, fold, staple, or mutilate it, or do
 anything else to it that your or anyone else's heart
 desires.</td></tr>
-<tr class="field"><th class="docinfo-name">field name:</th><td class="field-body">This is a &quot;generic bibliographic field&quot;.</td>
+<tr class="field-name field"><th class="docinfo-name">field name:</th><td class="field-body">This is a &quot;generic bibliographic field&quot;.</td>
 </tr>
-<tr class="field"><th class="docinfo-name">field name &quot;2&quot;:</th><td class="field-body"><p class="first">Generic bibliographic fields may contain multiple body elements.</p>
+<tr class="field-name-2 field"><th class="docinfo-name">field name &quot;2&quot;:</th><td class="field-body"><p class="first">Generic bibliographic fields may contain multiple body elements.</p>
 <p class="last">Like this.</p>
 </td>
 </tr>
