@@ -56,11 +56,11 @@ destroy, or improve it, quote it at length, excerpt,
 incorporate, collate, fold, staple, or mutilate it, or do
 anything else to it that your or anyone else's heart
 desires.</dd>
-<dt>field name</dt>
-<dd><p>This is a &quot;generic bibliographic field&quot;.</p>
+<dt class="field-name">field name</dt>
+<dd class="field-name"><p>This is a &quot;generic bibliographic field&quot;.</p>
 </dd>
-<dt>field name &quot;2&quot;</dt>
-<dd><p>Generic bibliographic fields may contain multiple body elements.</p>
+<dt class="field-name-2">field name &quot;2&quot;</dt>
+<dd class="field-name-2"><p>Generic bibliographic fields may contain multiple body elements.</p>
 <p>Like this.</p>
 </dd>
 </dl>
